hero-right needs finishing

--- a/index.html
+++ b/index.html
@@ -7,19 +7,53 @@
     <title>HERO Supplements</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="app.js"></script>
+    <script src="https://kit.fontawesome.com/f4c9fb1566.js"></script>
   </head>
   <body>
     <div id="" class="container">
       <section class="navbar">
         <div class="logo">
-          <img src="img/" alt="" />
+          <img src="img/" alt="HERO Supplements" />
         </div>
         <div class="nav-items">
           <ul>
-            <li>About</li>
+            <li>Products</li>
+            <li>About Us</li>
             <li>Contact</li>
-            <li>Help</li>
+            <li>FAQ</li>
           </ul>
+        </div>
+      </section>
+      <section class="info-ban">
+        <div class="info-banner">
+          <p>Free UK Delivery over £50</p>
+          <p>Shop Now</p>
+          <p>Premium Quality</p>
+        </div>
+      </section>
+      <section class="hero">
+        <!--Background img - https://images.unsplash.com/photo-1521804906057-1df8fdb718b7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80 -->
+        <div class="hero-left">
+          <h1>Whey Better Than The Rest.</h1>
+          <button>Shop Protein Supplements <i class="fas fa-play"></i></button>
+        </div>
+        <div class="hero-right">
+          <div class="HERO-zero">
+            <h2>
+              HERO Supplements ZER0 Range - Protein without the Extra Calories
+            </h2>
+            <button>Shop Now<i class="fas fa-play"></i></button>
+          </div>
+          <div class="free-shake">
+            <h3>
+              Free shake on us - just pay the postage<i class="fas fa-play"></i>
+            </h3>
+            <button>Claim my shake</button>
+            <img
+              src="https://rukminim1.flixcart.com/image/704/704/jqo3b0w0/protein-supplement/r/c/z/gold-standard-100-on0014-voi-optimum-nutrition-original-imafajgs2wbz8v4w.jpeg?q=70"
+              alt="gold standard"
+            />
+          </div>
         </div>
       </section>
     </div>
