finish website - awaiting logo

--- a/index.html
+++ b/index.html
@@ -38,21 +38,19 @@
           <button>Shop Protein Supplements <i class="fas fa-play"></i></button>
         </div>
         <div class="hero-right">
-          <div class="HERO-zero">
-            <h2>
-              HERO Supplements ZER0 Range - Protein without the Extra Calories
-            </h2>
-            <button>Shop Now<i class="fas fa-play"></i></button>
-          </div>
+          <h2>
+            HERO Supplements ZER0 Range - Protein without the Extra Calories
+          </h2>
+          <button>Shop Now<i class="fas fa-play"></i></button>
           <div class="free-shake">
             <h3>
-              Free shake on us - just pay the postage<i class="fas fa-play"></i>
+              Free shake on us - just pay the postage
             </h3>
-            <button>Claim my shake</button>
             <img
               src="https://rukminim1.flixcart.com/image/704/704/jqo3b0w0/protein-supplement/r/c/z/gold-standard-100-on0014-voi-optimum-nutrition-original-imafajgs2wbz8v4w.jpeg?q=70"
               alt="gold standard"
             />
+            <button>Claim my shake</button>
           </div>
         </div>
       </section>
