added product grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/f4c9fb1566.js"></script>
   </head>
   <body>
-    <div id="" class="container">
+    <div class="container">
       <section class="navbar">
         <div class="logo">
           <img src="img/" alt="HERO Supplements" />
@@ -52,6 +52,101 @@
             />
             <button>Claim my shake</button>
           </div>
+        </div>
+      </section>
+      <div class="header">
+        <p>Our casein range</p>
+      </div>
+      <section class="product-grid">
+        <div class="product">
+          <p class="p-name">Gold Standard Casein Protein</p>
+          <img
+            src="https://images-na.ssl-images-amazon.com/images/I/81wpUOliEnL._SL1500_.jpg"
+            alt="Protein Powder"
+            class="p-img"
+          />
+          <p class="p-price">£22.99</p>
+          <button class="p-button">Quick Buy</button>
+        </div>
+        <div class="product">
+          <p class="p-name">Gold Standard Casein Protein</p>
+          <img
+            src="https://images-na.ssl-images-amazon.com/images/I/81wpUOliEnL._SL1500_.jpg"
+            alt="Protein Powder"
+            class="p-img"
+          />
+          <p class="p-price">£22.99</p>
+          <button class="p-button">Quick Buy</button>
+        </div>
+        <div class="product">
+          <p class="p-name">Gold Standard Casein Protein</p>
+          <img
+            src="https://images-na.ssl-images-amazon.com/images/I/81wpUOliEnL._SL1500_.jpg"
+            alt="Protein Powder"
+            class="p-img"
+          />
+          <p class="p-price">£22.99</p>
+          <button class="p-button">Quick Buy</button>
+        </div>
+        <div class="product">
+          <p class="p-name">Gold Standard Casein Protein</p>
+          <img
+            src="https://images-na.ssl-images-amazon.com/images/I/81wpUOliEnL._SL1500_.jpg"
+            alt="Protein Powder"
+            class="p-img"
+          />
+          <p class="p-price">£22.99</p>
+          <button class="p-button">Quick Buy</button>
+        </div>
+        <div class="product">
+          <p class="p-name">Gold Standard Casein Protein</p>
+          <img
+            src="https://images-na.ssl-images-amazon.com/images/I/81wpUOliEnL._SL1500_.jpg"
+            alt="Protein Powder"
+            class="p-img"
+          />
+          <p class="p-price">£22.99</p>
+          <button class="p-button">Quick Buy</button>
+        </div>
+        <div class="product">
+          <p class="p-name">Gold Standard Casein Protein</p>
+          <img
+            src="https://images-na.ssl-images-amazon.com/images/I/81wpUOliEnL._SL1500_.jpg"
+            alt="Protein Powder"
+            class="p-img"
+          />
+          <p class="p-price">£22.99</p>
+          <button class="p-button">Quick Buy</button>
+        </div>
+        <div class="product">
+          <p class="p-name">Gold Standard Casein Protein</p>
+          <img
+            src="https://images-na.ssl-images-amazon.com/images/I/81wpUOliEnL._SL1500_.jpg"
+            alt="Protein Powder"
+            class="p-img"
+          />
+          <p class="p-price">£22.99</p>
+          <button class="p-button">Quick Buy</button>
+        </div>
+        <div class="product">
+          <p class="p-name">Gold Standard Casein Protein</p>
+          <img
+            src="https://images-na.ssl-images-amazon.com/images/I/81wpUOliEnL._SL1500_.jpg"
+            alt="Protein Powder"
+            class="p-img"
+          />
+          <p class="p-price">£22.99</p>
+          <button class="p-button">Quick Buy</button>
+        </div>
+        <div class="product">
+          <p class="p-name">Gold Standard Casein Protein</p>
+          <img
+            src="https://images-na.ssl-images-amazon.com/images/I/81wpUOliEnL._SL1500_.jpg"
+            alt="Protein Powder"
+            class="p-img"
+          />
+          <p class="p-price">£22.99</p>
+          <button class="p-button">Quick Buy</button>
         </div>
       </section>
     </div>
