add js features - tabs will return to this later

--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
         </div>
         <div class="nav-items">
           <ul>
-            <li>Products</li>
-            <li>About Us</li>
-            <li>Contact</li>
-            <li>FAQ</li>
+            <li><a id="products" onclick="myFunction()" href="#">Products</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">FAQ</a></li>
           </ul>
         </div>
       </section>
+      <div id="products-tab">
+        <ul>
+          <li>Protein</li>
+          <li>Creatine</li>
+          <li>Steriods</li>
+        </ul>
+      </div>
       <section class="info-ban">
         <div class="info-banner">
           <p>Free UK Delivery over £50</p>
